@@ -15,14 +15,17 @@ changes' is much more useful than 'misc edits' or 'code cleanup'.
 small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
-
 Changes for CVS:
+
+
+server/spell_util.c: Add out_of_map check to can_see_monsterP.  Fixes
+  crash when casting ball lightning/divine shock (and likely other events)
+  on maps not surrounded by walls.  MSW 2001-10-07
 
 New attacktype messages for damage.  Now it gives you the message for the
 damage type you actually did.  So if you are attacking with stormbringer,
 you get electrical or drain-based messages.  Also added special messages for
 the attack-based skills like punching, karate, etc.
-
 garbled 2001-10-06
 
 common/map.c: Add INS_ON_TOP flag to insert_ob_in_map calls to preserve
